@@ -9,7 +9,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: dict.test,v 1.24.2.3 2009/10/08 14:42:40 dkf Exp $
+# RCS: @(#) $Id: dict.test,v 1.24.2.4 2010/05/19 21:47:49 ferrieux Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest 2
@@ -130,6 +130,7 @@ test dict-3.15 {compiled dict get error cleanliness - Bug 2431847} -body {
 	dict get $a(z) d
     }}
 } -returnCodes error -result {key "d" not known in dictionary}
+test dict-3.16 {dict/list shimmering - Bug 3004007} {set l [list p 1 p 2 q 3];dict get $l q;set l} {p 1 p 2 q 3}
 
 test dict-4.1 {dict replace command} {
     getOrder [dict replace {a b c d}] a c
